German article added to news section of pyspread website

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -71,6 +71,12 @@
             <th style="vertical-align: top;">news<br></th>
 
             <td style="vertical-align: top; text-align: left;">
+                October/December 2013: Martin Manns has written a German article that compares pyspread to three other FOSS spreadsheets for SVG chart creation.
+                It is available at <a href=http://www.pro-linux.de/artikel/2/1654/diagramme-in-linux-vier-tabellenkalkulationen-im-vergleich.html>Pro-Linux</a>
+                and at <a href=http://www.freiesmagazin.de/mobil/freiesMagazin-2013-12-bilder.html#fm_13_12_tabellenkalkulationen>freiesMagazin</a>.
+                <br>
+
+            <td style="vertical-align: top; text-align: left;">
                 October 2013: Andreas Noteng has provided a preliminary deb package of Pyspread 0.2.5.
                 You can download it <a href=
                 "https://github.com/manns/pyspread/raw/gh-pages/latest_version/pyspread_0.2.5-1~ppa1_all.deb">
@@ -232,4 +238,4 @@
 <p><span style="font-style: italic;">Copyright Martin Manns<br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
 "font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-05. December 2013</span></p>
+31. December 2013</span></p>
