Web mai site changes for version 0.2.6

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -71,6 +71,28 @@
             <th style="vertical-align: top;">news<br></th>
 
             <td style="vertical-align: top; text-align: left;">
+                January 2014: Pyspread 0.2.6 is out. Get it <a href=
+                "">
+                here</a>.
+                <div style="margin-left: 40px;">
+                    <br>
+                    New features:<br>
+
+                    <ul>
+                        <li>String representation of S removed to prevent lockups in large grids</li>
+
+                        <li>Brazilian Portuguese localization added<br></li>
+
+                        <li>CSV file import now allows different file encodings<br></li>
+
+                        <li>Improved chart dialog<br></li>
+
+                        <li>Unit tests now succeed in Windows<br></li>
+
+                        <li>Various bug fixes<br></li>
+                    </ul>
+                </div>
+                <br>
                 October/December 2013: Martin Manns has written a German article that compares pyspread to three other FOSS spreadsheets for SVG chart creation.
                 It is available at <a href=http://www.pro-linux.de/artikel/2/1654/diagramme-in-linux-vier-tabellenkalkulationen-im-vergleich.html>Pro-Linux</a>
                 and at <a href=http://www.freiesmagazin.de/mobil/freiesMagazin-2013-12-bilder.html#fm_13_12_tabellenkalkulationen>freiesMagazin</a>.
