Further Web site changes for v0.2.6

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -85,7 +85,7 @@
                         <li>Code execution timeout, i. e. buggy code such as infinite loops does
 			    not lock up pyspread any more.
 			    Note: The timeout does not work for C operations such as
-		            a ** <big number><br></li>
+		            a ** \<big number\><br></li>
 
                         <li>Macro dialog now provides an error message field<br></li>
 
@@ -154,26 +154,6 @@
                 updated by Andreas Noteng. Get it <a href=
                 "http://ftp.us.debian.org/debian/pool/main/p/pyspread/pyspread_0.2.3-2_all.deb">
                 here</a>.<br>
-                <br>
-                January 2013: Pyspread 0.2.3 is out. Get it <a href=
-                "http://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.3.tar.gz#md5=c1f5fbb05f6b64cacfb49db5c38a80e1">
-                here</a>.
-
-                <div style="margin-left: 40px;">
-                    <br>
-                    New features:<br>
-
-                    <ul>
-                        <li>Matplotlib charts</li>
-
-                        <li>Image display in cells</li>
-
-                        <li>Localization in German, Dutch, Danish and
-                        Ukrainian<br></li>
-
-                        <li>Migration away from the PyMe dependency<br></li>
-                    </ul>
-                </div>
             </td>
 
             <td style="vertical-align: top;"><br></td>
