Bug fix for main Web site

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -84,8 +84,7 @@
 
                         <li>Code execution timeout, i. e. buggy code such as infinite loops does
 			    not lock up pyspread any more.
-			    Note: The timeout does not work for C operations such as
-		            a ** \<big number\><br></li>
+			    Note: The timeout does not work for long running C operations<br></li>
 
                         <li>Macro dialog now provides an error message field<br></li>
 
