Changes to make main Web site W3C compliant

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -97,8 +97,8 @@
                 </div>
                 <br>
                 October/December 2013: Martin Manns has written a German article that compares pyspread to three other FOSS spreadsheets for SVG chart creation.
-                It is available at <a href=http://www.pro-linux.de/artikel/2/1654/diagramme-in-linux-vier-tabellenkalkulationen-im-vergleich.html>Pro-Linux</a>
-                and at <a href=http://www.freiesmagazin.de/mobil/freiesMagazin-2013-12-bilder.html#fm_13_12_tabellenkalkulationen>freiesMagazin</a>.
+                It is available at <a href="http://www.pro-linux.de/artikel/2/1654/diagramme-in-linux-vier-tabellenkalkulationen-im-vergleich.html">Pro-Linux</a>
+                and at <a href="http://www.freiesmagazin.de/mobil/freiesMagazin-2013-12-bilder.html#fm_13_12_tabellenkalkulationen">freiesMagazin</a>.
                 <p><br>
                 October 2013: Andreas Noteng has provided a preliminary deb package of Pyspread 0.2.5.
                 You can download it <a href=
