Download Web site fixed to be W3C compliant

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -75,7 +75,7 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
                   python setup.py install</tt><br>
                 <br>
               </li>
-              <li>Windows: Replace <italics>python</italics> with your
+              <li>Windows: Replace <i>python</i> with your
                 Python interpreter (absolute path)<br>
                 <br>
               </li>
