Download page fixed

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -167,20 +167,20 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
                 to be extracted (e. g. with 7zip) and installed as
                 follows:<br>
               </li>
-                <li>Log in as Administrator<br>
+                <li>Log in as Administrator<br> <br>
                 </li>
-                <li>Start cmd</li>
-                <li>cd to the extraction directory</li>
+                <li>Start cmd <br> <br></li>
+                <li>cd to the extraction directory <br> <br></li>
                 <li>Type in <br>
                   <tt>python setup.py install<br>
-                    <br>
+                    <br> <br>
                   </tt></li>
               <li>Download and extract the pyspread tarball (e. g. with
                 7zip)<br>
-                <br>
+                <br> <br>
               </li>
               <li>Start pyspread by double-clicking on the file
-                pyspread.bat in the extraction directory<br>
+                pyspread.bat in the extraction directory<br> <br>
               </li>
             </ol>
           </td>
