Download page fixed

--- a/_includes/content/download.html
+++ b/_includes/content/download.html
@@ -165,14 +165,14 @@ href="http://pypi.python.org/pypi?:action=search&amp;term=pyspread&amp;submit=se
                 For <span style="font-weight: bold;">64 bit systems</span>,
                 the python-gnupg tarball (python-gnupg-0.3.4.tar.gz) has
                 to be extracted (e. g. with 7zip) and installed as
-                follows:<br>
+                follows:<br> <br>
               </li>
                 <li>Log in as Administrator<br> <br>
                 </li>
                 <li>Start cmd <br> <br></li>
                 <li>cd to the extraction directory <br> <br></li>
                 <li>Type in <br>
-                  <tt>python setup.py install<br>
+                  <tt>python setup.py install
                     <br> <br>
                   </tt></li>
               <li>Download and extract the pyspread tarball (e. g. with
