--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -71,6 +71,11 @@
             <th style="vertical-align: top;">news<br></th>
 
             <td style="vertical-align: top; text-align: left;">
+                February 2014: Pyspread 0.2.7 is out. Get it <a href=
+                "https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.7.tar.gz#md5=2306a96124edbb46230ea5cb1199e3c0">
+                here</a>. This is a bug fix release for the chart dialog on Windows systems.
+                </div>
+                <br>
                 February 2014: Pyspread 0.2.6 is out. Get it <a href=
                 "https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.6.tar.gz#md5=58777ac67dfe044370331f2a7f887a40">
                 here</a>.
@@ -246,4 +251,4 @@
 <p><span style="font-style: italic;">Copyright Martin Manns<br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
 "font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-03. February 2014</span></p>
+05. February 2014</span></p>
