--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -71,6 +71,11 @@
             <th style="vertical-align: top;">news<br></th>
 
             <td style="vertical-align: top; text-align: left;">
+                March 2014: Andreas Noteng has provided a preliminary deb package of Pyspread 0.2.6.
+                You can download it <a href=
+                "https://github.com/manns/pyspread/raw/gh-pages/latest_version/pyspread_0.2.6-1~2_all.deb">
+                here</a>.
+                <p><br>
                 February 2014: Pyspread 0.2.7 is out. Get it <a href=
                 "https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.7.tar.gz#md5=2306a96124edbb46230ea5cb1199e3c0">
                 here</a>. This is a bug fix release for the chart dialog on Windows systems.
