Basemap screenshot added to Web main page

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -244,9 +244,13 @@
                 subscribe to the list.
             </td>
 
-            <td style="vertical-align: top;"><br></td>
-
-            <td><br></td>
+            <td style="width: 211px;">
+                <a href="images/screenshot_basemap_large.png"><img alt=
+                "Pyspread screenshot" src="images/screenshot_basemap_thumb.png"
+                style=
+                "border: 0px solid ; width: 200px; height: 173px;"></a><br>
+                <a href="images/screenshot_fonts.png"><br></a>
+            </td>
         </tr>
     </tbody>
 </table>
@@ -256,4 +260,4 @@
 <p><span style="font-style: italic;">Copyright Martin Manns<br>
 Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br style=
 "font-style: italic;"></span> <span style="font-style: italic;">Last changed:
-04. March 2014</span></p>
+10. March 2014</span></p>
