News section changed, Slackware and Debian packaging of 0.2.6 + added

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -71,10 +71,16 @@
             <th style="vertical-align: top;">news<br></th>
 
             <td style="vertical-align: top; text-align: left;">
-                March 2014: Andreas Noteng has provided a preliminary deb package of Pyspread 0.2.6.
-                You can download it <a href=
-                "https://github.com/manns/pyspread/raw/gh-pages/latest_version/pyspread_0.2.6-1~2_all.deb">
-                here</a>.
+
+                March 2014: Andreas Noteng has provided a 
+		<a href="https://packages.debian.org/sid/pyspread">deb package</a>
+		for installing pyspread 0.2.6 on Debian Linux. The package can
+		also be found in the Debian testing repository.
+                <p><br>
+		February 2014: Dimitris Zlatanidis has provided a 
+		<a href="http://slackbuilds.org/repository/14.1/office/pyspread/">
+		SlackBuild</a>
+		for installing pyspread on <a href="http://www.slackware.com/">Slackware Linux 14.1</a>.
                 <p><br>
                 February 2014: Pyspread 0.2.7 is out. Get it <a href=
                 "https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.7.tar.gz#md5=2306a96124edbb46230ea5cb1199e3c0">
@@ -105,64 +111,6 @@
                         <li>Example macro for in cell LaTeX equations added<br></li>
                     </ul>
                 </div>
-                <br>
-                October/December 2013: Martin Manns has written a German article that compares pyspread to three other FOSS spreadsheets for SVG chart creation.
-                It is available at <a href="http://www.pro-linux.de/artikel/2/1654/diagramme-in-linux-vier-tabellenkalkulationen-im-vergleich.html">Pro-Linux</a>
-                and at <a href="http://www.freiesmagazin.de/mobil/freiesMagazin-2013-12-bilder.html#fm_13_12_tabellenkalkulationen">freiesMagazin</a>.
-                <p><br>
-                October 2013: Andreas Noteng has provided a preliminary deb package of Pyspread 0.2.5.
-                You can download it <a href=
-                "https://github.com/manns/pyspread/raw/gh-pages/latest_version/pyspread_0.2.5-1~ppa1_all.deb">
-                here</a>.
-                <p><br>
-                September 2013: Pyspread 0.2.5 is out. Get it <a href=
-                "https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.5.tar.gz#md5=19962c8e2626e285ec8cabf96f9bc60c">
-                here</a>.
-                <div style="margin-left: 40px;">
-                    <br>
-                    New features:<br>
-
-                    <ul>
-                        <li>String representation of S removed to prevent lockups in large grids</li>
-
-                        <li>Brazilian Portuguese localization added<br></li>
-
-                        <li>CSV file import now allows different file encodings<br></li>
-
-                        <li>Improved chart dialog<br></li>
-
-                        <li>Unit tests now succeed in Windows<br></li>
-
-                        <li>Various bug fixes<br></li>
-                    </ul>
-                </div>
-                <br>
-                July 2013: Pyspread 0.2.4 is out. Get it <a href=
-                "https://pypi.python.org/packages/source/p/pyspread/pyspread-0.2.4.tar.gz#md5=0b738a605408d021f65683073f6e3a4a">
-                here</a>.
-                <div style="margin-left: 40px;">
-                    <br>
-                    New features:<br>
-
-                    <ul>
-                        <li>Windows compatibility</li>
-
-                        <li>More charts and chart options</li>
-
-                        <li>Localization in Nowegian Nynorsk and Bokmaal<br></li>
-
-                        <li>More than 64k characters supported in one cell<br></li>
-
-                        <li>High quality embedded images<br></li>
-
-                        <li>Paste iterable data into multiple cells via Paste As...<br></li>
-                    </ul>
-                </div>
-                <br>
-                April 2013: The Debian package of pyspread 0.2.3 has been
-                updated by Andreas Noteng. Get it <a href=
-                "http://ftp.us.debian.org/debian/pool/main/p/pyspread/pyspread_0.2.3-2_all.deb">
-                here</a>.<br>
             </td>
 
             <td style="vertical-align: top;"><br></td>
