Windows support rephrased in main page

--- a/_includes/content/home.html
+++ b/_includes/content/home.html
@@ -130,8 +130,7 @@
             <td style="vertical-align: top;">
                 Pyspread is designed for Linux and other GTK platforms.<br>
                 <br>
-                Windows™ is supported again in version 0.2.4. However, it
-                is unsupported for the version 0.2.0 up to 0.2.3.
+                Windows™ is supported starting with version 0.2.4.
                 <br>
                 <span style=
                 "text-decoration: underline;">Dependencies</span><br>
