Langauge contributions updated

--- a/_includes/content/contribute.html
+++ b/_includes/content/contribute.html
@@ -55,22 +55,22 @@
               project page</a>, <a
               href="http://translationproject.org/html/translators.html">howto</a>)<br>
             <br>
-            Language overview for pyspread v. 0.2.4:<br>
+            Language overview:<br>
             <ul>
-              <li style="color: rgb(0, 153, 0);">Brazilian Portuguese (pt): 477 /
-                477 translated by Enrico Nicoletto</li>
-              <li style="color: rgb(255, 0, 0);">Danish (da): 425 / 477
+              <li style="color: rgb(255, 0, 0);">Brazilian Portuguese (pt): 472 /
+                498 translated by Enrico Nicoletto</li>
+              <li style="color: rgb(255, 0, 0);">Danish (da): 421 / 498
                 translated by Joe Hansen</li>
-              <li style="color: rgb(255, 0, 0);">Dutch (nl): 102 / 477
+              <li style="color: rgb(255, 0, 0);">Dutch (nl): 102 / 498
                 translated by Mark Haanen</li>
-              <li style="color: rgb(255, 0, 0);">German (de): 454 / 477
+              <li style="color: rgb(0, 153, 0);">German (de): 498 / 498
                 translated by Mario Blättermann, Martin Manns and Christian Kirbach</li>
-              <li style="color: rgb(255, 0, 0);">Nowegian Bokmaal (nb): 249 /
-                477 translated by Andreas Noteng</li>
-              <li style="color: rgb(255, 0, 0);">Nowegian Nynorsk (nn): 358 /
-                477 translated by Andreas Noteng</li>
-              <li style="color: rgb(0, 153, 0);">Ukrainian (uk): 477 /
-                477 translated by Yuri Chornoivan</li>
+              <li style="color: rgb(255, 0, 0);">Nowegian Bokmaal (nb): 247 /
+                498 translated by Andreas Noteng</li>
+              <li style="color: rgb(255, 0, 0);">Nowegian Nynorsk (nn): 354 /
+                498 translated by Andreas Noteng</li>
+              <li style="color: rgb(0, 153, 0);">Ukrainian (uk): 498 /
+                498 translated by Yuri Chornoivan</li>
             </ul>
             <span style="font-weight: bold;">Charts</span><br>
             <br>
@@ -357,5 +357,5 @@
     <p><span style="font-style: italic;">Copyright Martin Manns<br>
         Contact mmanns &lt; at &gt; gmx &lt; dot &gt; net<br
           style="font-style: italic;">
-      </span> <span style="font-style: italic;">Last changed: 13. January
+      </span> <span style="font-style: italic;">Last changed: 02. June
         2014</span></p>
